# swiss-open-data

./: .gitignore  LICENSE  MAPPING.md  Makefile  README.md  _preview.py  build_metadata.py  catalog.yml  config.py  crawl.py  download.py  download_docs.py  mark_excluded.py  probe_sizes.py  pyproject.toml
.github/workflows/: build.yml
app_conf/: dcat-export.config.json  deploy.config.example.json  jsonjsdb-config.html  llm-web.config.example.json  static-make.config.json  update-app.json
public/: config.json  config.xlsx  configFilter.json
src/: build_metadata.py  config.py  crawl.py  doc_utils.py  download.py  download_common.py  download_docs.py  export_dcat.py  i14y.py  keyword_translations.json  mark_excluded.py
