[project]
name = "datannur-opench"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ckanapi>=4.11",
    "datannurpy==0.21.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.11",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
exclude = [
  "catalog/",
  "out/",
  "staging/",
  "_preview.py",
  "**/__pycache__",
  ".venv",
]

[tool.ruff]
target-version = "py314"
exclude = [
  "catalog/",
  "out/",
  "staging/",
  "_preview.py",
]

[tool.uv]
environments = ["sys_platform == 'darwin'"]
prerelease = "allow"
