[project]
name = "datannur-opench"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ckanapi>=4.11",
    "datannurpy==0.22.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.11",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src/"]

[tool.ruff]
target-version = "py314"
include = ["src/**/*.py"]

[tool.uv]
environments = ["sys_platform == 'darwin'"]
