[project]
name = "swiss-open-data"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "ckanapi>=4.11",
    "datannurpy[geo]==0.33.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pyright>=1.1",
    "ruff>=0.11",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src/"]

[tool.ruff]
target-version = "py314"
include = ["src/**/*.py"]
